# LAN-Chat-App

./: CMakeLists.txt  README.md
src/: client.cpp  ext_functions.cpp  main.cpp  server.cpp
